--- a/timer.html
+++ b/timer.html
@@ -6,7 +6,7 @@
 <title>Timer</title>
 
 
-<link rel="stylesheet" href="normalize.css" type="text/css">
+<link rel="stylesheet" href="css/normalize.css" type="text/css">
 
 <style type='text/css'>
 
@@ -125,9 +125,9 @@
 
 </style>
 
-<script src="mootools-core-1.4.5.js" type="text/javascript"></script>
-<script src="js-lib.js" type="text/javascript"></script>
-<script src="jstable.js" type="text/javascript"></script>
+<script src="js/mootools-core-1.4.5.js" type="text/javascript"></script>
+<script src="js/js-lib.js" type="text/javascript"></script>
+<script src="js/jstable.js" type="text/javascript"></script>
 
 <script type='text/javascript'>
 
