--- a/timer.html
+++ b/timer.html
@@ -47,6 +47,12 @@ window.addEvent('domready', function() {
 			<a href='#'>long</a>
 		</div>
 	</div>
+	
+	<div class='section'>
+		<div class='action-row'>
+			<a id='js-clear' class='dangerous' href='javascript:void(0)'>Clear</a>
+		</div>
+	</div>
 
 	<div class='section'>
 		<div id='js-duration' class='time'>00:00:00</div>
@@ -55,9 +61,6 @@ window.addEvent('domready', function() {
 
 	<div class='section last event-table'>
 		<div id='js-event-table'></div>
-		<div class='action-row'>
-			<a id='js-clear' class='dangerous' href='javascript:void(0)'>Clear</a>
-		</div>
 	</div>
 
 
