--- a/timer.html
+++ b/timer.html
@@ -50,6 +50,7 @@ window.addEvent('domready', function() {
 	
 	<div class='section'>
 		<div class='action-row'>
+			<span id='js-total-duration' style='float:left'>total: 00:00</span>
 			<a id='js-clear' class='dangerous' href='javascript:void(0)'>Clear</a>
 		</div>
 	</div>
