add stop button to the application

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ window.addEvent('domready', function() {
 	<div class='section'>
 		<div class='action-row'>
 			<span id='js-total-duration' style='float:left'>total: 00:00</span>
+			<a id='js-stop' href='javascript:void(0)'>Stop</a> | 
 			<a id='js-clear' class='dangerous' href='javascript:void(0)'>Clear</a>
 		</div>
 	</div>
