--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@ window.addEvent('domready', function() {
 		<div id='js-event-name'></div>
 	</div>
 
-	<div class='section last event-table'>
+	<div class='section event-table'>
 		<div id='js-event-table'></div>
 	</div>
 
+	<div class='section last event-table'>
+		<div id='js-summary-table'></div>
+	</div>
 
 </div>
 
